Fixed highlighted issues.